--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,5 @@ jobs:
           command: sdkmanager --list --verbose | grep system-images
       - run:
           name: Setup Emulator
-          command:  echo "no" | sdkmanager "system-images;android-24;default;armeabi-v7a"
+          command:  sdkmanager "system-images;android-24;default;armeabi-v7a" && echo Hello
      
