--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,5 @@ jobs:
           command: sdkmanager --list --verbose | grep system-images
       - run:
           name: Setup Emulator
-          command:  sdkmanager "system-images;android-24;default;armeabi-v7a" && echo no | avdmanager create avd -n test -k "system-images;android-24;default;armeabi-v7a" && echo helloworld
+          command:  sdkmanager "system-images;android-24;default;armeabi-v7a" && no | avdmanager create avd -n test -k "system-images;android-24;default;armeabi-v7a" && echo helloworld
      
