--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,28 @@ jobs:
           command: sdkmanager --list --verbose | grep system-images
       - run:
           name: Setup Emulator
-          command:  sdkmanager "system-images;android-24;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-24;default;armeabi-v7a" && echo helloworld
-     
+          command: sdkmanager "system-images;android-24;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-24;default;armeabi-v7a"
+      - run:
+          name: Launch Emulator
+          command: |
+                  cd $ANDROID_HOME/emulator;ls                  
+                  export LD_LIBRARY_PATH=$ANDROID_HOME/emulator/lib64:$ANDROID_HOME/emulator/lib64/qt/lib
+                  emulator -list-avds 
+                  sudo apt-get install pulseaudio                  
+                  emulator -avd test -no-audio -no-window -no-boot-anim -no-window -accel on
+          background: true
+      - run:
+          name: Wait emulator
+          command: |
+              circle-android wait-for-boot
+              sleep 200
+              adb shell input keyevent 82
+              sleep 200
+      - run:
+          name: Run Espresso UI Tests
+          command: ./gradlew connectedAndroidTest
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
