--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,9 @@ jobs:
               circle-android wait-for-boot
               sleep 200
               adb shell input keyevent 82
-              sleep 200
       - run:
           name: Run Espresso UI Tests
-          command: ./gradlew connectedAndroidTest
+          command: sleep 200 && ./gradlew connectedAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
